# lib-creator

./: CMakeLists.txt
HeaderOnlyLibrary/include/: Sum.ipp
LibrariesCreator/: CMakeLists.txt  Diff.cpp  Diff.hpp  Mult.cpp
StaticLibrary/include/: Mult.hpp
StaticLibrary/lib/: StaticLibrary.lib
